--- a/محمد.mw
+++ b/محمد.mw
@@ -434,10 +434,10 @@
 رسول الله صلى الله عليه وسلم دا هم وفرمايل چې : (اى دخدای دپيغمبر لورې فاطمې ! او اى دخدای دپيغمبر عمې صفيې! دخداى او آخرت لپاره څه عمل وكړئ زه تاسې له خدای جل جلاله څخه نشم خلاصولای ). د نوموړې خطبې له ويلو وروسته رسول الله صلى الله عليه وسلم بيرته دحضرت عايشې رضى الله عنها كورته تشريف يووړ , دناروغتيا په نا كرارۍ كې نبوي ذات ته ورپه يادشول چې څه اشرفۍ يې له بي بي عايشې سره ايښې وې هغه يې راوبلله اوورته ويې فرمايل : (عايشې! هغه اشرفۍ چيرې دي ؟ محمد(صلى الله عليه وسلم ) به له خدايه جل جلاله سره پداسې حال كې وويني چې دی په هغه بد ګمانه وي , لاړه شه او هغه دخدای جل جلاله په لاره كې خيرات كړه . ) 
 ددوشنبې په سهار چې درسول الله صلى اله عليه وسلم دناروغتيا ديارلسمه شپه وه چې رسول لله صلى الله عليه وسلم دخپل كور له وره (دروازې) نه پرده پورته كړه ,ويې ليدل چې خلك په لمانځه ولاړدي ,ډير خوښ اوموسكى شو ,حضرت ابوبكر صديق رضى الله عنه فكر وكړ چې رسول الله صلى اله عليه وسلم لمانځه ادا كولو ته راځي ځكه يې نووغوښتل چې شاته شي ,خو رسول الله صلى الله عليه وسلم په اشاره پوه كړ چې لمونځ وركړي ,رسول الله صلى الله عليه وسلم بيرته حجرې ته ننوت ,دا هغه وروستنۍ ليدنه وه چې صحابۀ كرامو له نبوي سپيڅلي څيرې نه وكړه .
 
-== دوفات كال  ==
+=== د مړينې كال  ===
 رسول الله صلى الله عليه وسلم به هر كال دروژې په مياشت كې لس ورځې په اعتكاف كي تيرولې ,خو په ورستنۍ روژه كې شل ورځې په اعتكاف كې كيناست ,رسول الله صلى الله عليه وسلم به هر كال دروژې په مياشت كې يوځل دحضرت جبرايل عليه السلام له خولې نه قرآنكريم اوريده ,خو د ورستني كال په روژه كې يې دوه ځلې واوريده . 
 دوروستني حج او په ځينو نورو خطبو كې رسول الله صلى الله عليه وسلم ځيني داسې خبرې كړې وې چې هغه دمړينې يادونه وه ,لكه چې دحج په وروستۍ خطبه كې يې وفرمايل : (زه ددې خبرې هيله نلرم چې په راتلونكي كال كې له تاسې سره وليدلای شم ,ښايي تر دې وروسته حج ونه كړای شم . ) 
-دحج دفريضې داداكولو ترراتګ وروسته رسو ل الله صلى الله عليه وسلم داحد دشهيدانو هديرې ته ورغى ,او هلته يې هم داسې خطبه وويله چې ګواكې څوك له مړواو ژوندو سره په مخه ښه كوي ,رسول الله صلى الله عليه وسلم دصفر دمياشتې په اولسمه يا اتلسمه نيټه حضرت اسامه بن زيد رضى الله عنه ته وفرمايل : (ته له لښكر سره لاړشه او له هغو شريرو خلكو څخه دې دپلار كسات واخله . ) دموته په وتلي جنګ كې حضرت زيد رضى الله عنه شهيد كړای شوى وو ,ځكه نو رسول الله صلى الله عليه وسلم حضرت اسامه بن زيد رضى الله عنه ته هلته دبيا تللو امر وكړ . 
+دحج دفريضې داداكولو ترراتګ وروسته رسو ل الله صلى الله عليه وسلم داحد دشهيدانو هديرې ته ورغى ,او هلته يې هم داسې خطبه وويله چې ګواكې څوك له مړواو ژوندو سره په مخه ښه كوي ,رسول الله صلى الله عليه وسلم دصفر دمياشتې په اولسمه يا اتلسمه نيټه حضرت اسامه بن زيد رضى الله عنه ته وفرمايل : (ته له لښكر سره لاړشه او له هغو شريرو خلكو څخه دې دپلار كسات واخله . ) دموته په وتلي جنګ كې حضرت زيد رضى الله عنه شهيد كړای شوى وو ,ځكه نو رسول الله صلى الله عليه وسلم حضرت اسامه بن زيد رضى الله عنه ته هلته دبيا تللو امر وكړ .
 
 == وفات ==
 څومره چې ورځ پخيدله په رسول الله صلى الله عليه وسلم بې هوښي ډيريدله ,درسول الله صلى الله عليه وسلم دزړه ټكړې حضرت بي بي فاطمې رضى الله عنها چې دا ناكراري وليدله نوپه ژړا يې وويل های زما دپلارنا كراري .رسول الله صلى الله عليه وسلم ورته وفرمايل : (ستا پلار به تر دې ورسته نا كراره نه شي . )
