/* دبنو قريظه پای : */

--- a/محمد.mw
+++ b/محمد.mw
@@ -415,7 +415,7 @@
 قريشو چې داخبره واوريدله په بنو قريظه پې باوره شول ,او دازموينې لپاره يې ترې وغوښتل څو د شنبې په ورځ په مسلمانانو بريد وكړي ,يهودو مخالفت وكړ چې پدې څه سره د دوې تر منځ بې باوري لاهم ډيره او دقريشو ملا سسته شوه . 
 دخندق دجنګ دوهم نوم احزاب هم دى ,ځكه پدې جنګ كې دعربو او يهودو ډيرو كورنيواو ډلو ټپلو ګډون كړى وو,پدې جنګ كې شپږ تنه مسلمانان شهيدان او اته تنه مشركين ووژل شول ,خو د(اَوس )دكورنۍ مشر او دانصارو يو غښتلى مټ حضرت سعد بن معاذرضى الله عنه پدې جنګ كې ټپي اوڅوورځې وروسته دهمدې ټپ له امله په شهادت ورسيده . انالله وانا اليه راجعون .
 
-== دبنو قريظه پای : ==
+== دبنو قريظه پای ==
 له يهودو سره چې كوم تړون شوى وو نو بنو قينقاع هغه دبدر او بنو نضير داحدپه ورځ مات كړ, له همدې كبله دادواړه يهودي كورنۍ له مدينې څخه جلا وطنې شوې .بنو قريظه دخندق غزا په پيل كې دمسلمانانو لورې ونيو ,دجنګ په جريان كې يوه يهودي ځان هغه كلاوو ته ورساوه چيرې چې مسلمانې ميرمنې او ماشومان اوسيدل ,هلته حضرت حسان رضى الله عنه پهره كوله ,خو داچې په جنګ كې ديوې پيښې له كبله يې ونه شوای كولای هغه يهودي ووژني ,حضرت صفيي رضى الله عنها دحضرت حمزه رضى الله عنه خور بي بي هغه يهودى وواژه ,توره يې ترې په غنيمت كې واخيستله اوسر يې دكلا شاته وغور ځاوه , يهود پوه شول چې دلته هم وسله وال كسان شته ځكه يې نو بريد ونكړ . 
 دجنګ په مهال كې رسول الله صلى الله عليه وسلم دبنو قريظه يهودوته حضرت سعدبن معاذ او حضرت سعد بن عباده رضى الله عنهما ورواستول ,څو هغوی ته ليكل شوى تړون ورياد كړي ,خو هغوی وويل محمد څوك دى او تړون يې څه شى دى ؟ 
 ځكه نو دې يهودو دخندق په جنګ كې عملا برخه واخيسته ,او دماتي پر مهال يې هم داسلام لوی دښمن ,دبنونضير دجلاوطن شوو يهودو مشر حُيَي بن اخطب له ځانه سره راوست ,حُيَي بن اخطب دجلاوطنۍ په مهال ژمنه كړې وه چې دمسلمانانو په خلاف به دچا مرسته نه كوي ,خو په نوموړي جنګ كې يې نه يواځې داچې دقريشو مرسته يې وكړه بلكه دمسلمانانو حليف (سوګندي) يهود بني قريظه يې هم جنګ ته ولمسولو . 
