*Empty MediaWiki Message*

--- a/ازربايجان.mw
+++ b/ازربايجان.mw
@@ -1,3 +1,4 @@
+{{ژباړل}}
 :''د سهېل لوېديځ [[ايران]] د سيمې لپاره، [[ايراني آذربايجان]] وګورۍ.''
 {{هېواد-مالوماتبکس|
 آرنی نوم = Azərbaycan Respublikası<br>د آذربايجان جمهوريت|
