--- a/کړنی_سېک.mw
+++ b/کړنی_سېک.mw
@@ -1,4 +1,4 @@
-<font face="Tahoma">
+{{ژباړل}}
 [[Image:Action potential vert.png|thumb|350px|'''A.''' A schematic view of an idealized action potential illustrates its various phases as the action potential passes a point on a [[cell membrane]]. '''B.''' Actual recordings of action potentials are often distorted compared to the schematic view because of variations in [[electrophysiology|electrophysiological]] techniques used to make the recording]]
 
 کړنی-سېک يوه داسې برېښناييزه څپه ده چې د سلولونو پر پردې خپل مزل وهي. کړنی-سېک د حېواني ژوند يو اهم توکی دی، او د نسجونو تر مېنځ په ډېرې چټکۍ سره د مالوماتو لېږدنه رالېږدنه د همدغې څپې کار دی. کړني-سېکونه په بوټو کې هم پېښېږي. همدا څپې د بېلابېلو سلولونو لخوا جوړېږي، خو په لويه کچه د عصبي غونډال لخوا ډېر زيات د نيورانونو تر مېنځ د مواصلاتو له لارې د مالوماتو لېږلو لپاره کارول کېږي، ددې تر څنګ د نيورانونو نه د بدن نورو نسجونو ته لکه عضلاتي نسجونو او مرغړيو ته هم د مالوماتو د لېږد په چارو کې همدا څپې کارول کېږي.
