*Empty MediaWiki Message*

--- a/پروېز_مشرف.mw
+++ b/پروېز_مشرف.mw
@@ -1,3 +1,4 @@
+{{ژباړل}}
 {| align="left" cellpadding="2" cellspacing="0" style="border: 1px solid; margin-left: 1em"
 |+ '''جنرال پروېز مشرف'''
 ! bgcolor="#efefef" colspan="2" |[[Image:Lt General Musharaf.jpg|250px|Lt General Musharraf COAS and I Corp Commander (Mangla)]]
