*Empty MediaWiki Message*

--- a/محمد_زکريا_رازي.mw
+++ b/محمد_زکريا_رازي.mw
@@ -1,4 +1,4 @@
-== '''نوم''' ==
+{{ژباړل}}
  
 د رازي نوم محمد كنيت يې ابو عبدالله او ابو الفضل، لقب يې فخر الدين ؤ، د نسب لړۍ يې پدې ډول ده: ابو عبدالله محمد بن عمر بن الحسين.
 
