*Empty MediaWiki Message*

--- a/موزامبیق.mw
+++ b/موزامبیق.mw
@@ -1,4 +1,4 @@
-:''See also the [[Island of Mozambique]].  For the song by Bob Dylan, see ''[[Desire (album)]]''.''
+{{ژباړل}}
 {{Infobox Country |
 native_name = ''República de Moçambique'' |
 conventional_long_name = Republic of Mozambique |
