--- a/احمد_شاه_مسعود.mw
+++ b/احمد_شاه_مسعود.mw
@@ -24,7 +24,7 @@
 نو مونه ډير وو،ستايني او تبليغات ډير وو، خو د بري څرک نه لګيده .د انګريزانو او فرانسويانو مرستي 
 مسعود ته رواني وې... ))
 
-===سمسور افغان په خپل اثر (دويمه سقاوي) كې داسې ليكي:===
+===سمسور افغان په خپل اثر (دويمه سقاوي) كې داسې ليكي ===
 
 ((... دځيني شواهدو له مخي احمد شاه مسعود په استقلال ليسه کي دتعليم پر وخت لومړي دفرانسي د استخباراتو سره تړاو وموند ، وروسته هغوي د انګلستان (M 1-6) ته معرفي کړ.دغي شبکي دهغه هيواد دتجارتي ټلويزيون زوړ چلونکي (سنديګال) ته وظيفه ورکړه چه پنجشير ته لاړ شي او هلته يو ځوان قومندان چه 
 دويم ټيټو دي، وويني او پر هغه باندي د ټلويزيون لپاره يو فلم ډک کړي. د همدي (سنډيګال) په مرسته داحمدشاه مسعود ورور احمدولي د انګريزي ژبي زده کړي لپاره لندن ته ليږل کيږي... دغه يو ساعته فلم وروسته (CIA) ته وسپارل شو او له ځينو انګيرنو سره سره *****ره ډاګيزه شوي نده چه(سي أی اې )هم پټه معامله ورسره پيل کړه که څنګه؟ 
