*Empty MediaWiki Message*

--- a/محمد_عالم_خان.mw
+++ b/محمد_عالم_خان.mw
@@ -1,4 +1,4 @@
-[[Image:Prokudin-Gorskii-19.jpg|thumb|200px|left|عالم خان, انځور كښنه د [[سرګي مېخاېلوف پروكودين ګورسكي]] لخوا په ۱۹۱۱ز كال كې]]
+{{ژباړل}}[[Image:Prokudin-Gorskii-19.jpg|thumb|200px|left|عالم خان, انځور كښنه د [[سرګي مېخاېلوف پروكودين ګورسكي]] لخوا په ۱۹۱۱ز كال كې]]
 
 
 امير محمد عالم خان (۱۸۸۰-۱۹۴۴ز) كې د مغولي واكمنۍ وروستې [[امير]] ؤ، چې په [[بخارا]] يې واكمني كوله.  كه څه هم [[بخارا]] د تزاري روسيې تر واك لاندې وه، خو دې [[امير]] وكړاى شول، چې له ۱۹۱۱ز د جنورۍ له درېيمې تر ۱۹۲۰ز ۳۰ اګست پورې خپل [[امارات]] پدې ښار كې نه يواځې وساتي، بلكه خپله [[خپلواكي]] هم ترلاسه كړي.  دا امير د [[جنګېز خان]] له نسل څخه ؤ. 
