*Empty MediaWiki Message*

--- a/نوی_کال.mw
+++ b/نوی_کال.mw
@@ -1,4 +1,4 @@
-'''نوی کال''' په بېلابېلو کلتورنو او هېوادونو کې يوه داسې پېښه ده په کوم کې چې د يوه کال پای او د بل نوي کال پيل لمانځل کېږي. هغه کلتورنه او هېوادونه، کوم چې د کاليزې مېچنه لري، همدا ټول نوی کال لمانځي. 
+{{ژباړل}}'''نوی کال''' په بېلابېلو کلتورنو او هېوادونو کې يوه داسې پېښه ده په کوم کې چې د يوه کال پای او د بل نوي کال پيل لمانځل کېږي. هغه کلتورنه او هېوادونه، کوم چې د کاليزې مېچنه لري، همدا ټول نوی کال لمانځي. 
 ==د اوسمهال نوي کال لمانځنې==
 ''د نورو مالوماتو لپاره، [[د نوي کال شپه]] او [[د نوي کال ورځ]] وګورۍ''
 
