*Empty MediaWiki Message*

--- a/گرځندويي.mw
+++ b/گرځندويي.mw
@@ -1,5 +1,4 @@
-
-[[Image:IMG 9789r-vi.jpg|thumb|right|220px|Tourists at O'ahu island, Hawaii]]
+{{ژباړل}}[[Image:IMG 9789r-vi.jpg|thumb|right|220px|Tourists at O'ahu island, Hawaii]]
 '''Tourism''' is the act of [[travel]] for predominantly [[recreation]]al or [[leisure]] purposes, and also refers to the provision of services in support of this act. According to the [[World Tourism Organization]], '''tourists''' are people who "travel to and stay in places outside their usual environment for not more than one consecutive year for leisure, business and other purposes not related to the exercise of an activity remunerated from within the place visited". 
 
 Tourism, however long its incident duration, has become an extremely popular, global activity. In 2004, there were over 763 million international tourist arrivals.<ref name="number">{{cite web | year = 2005| url = http://www.world-tourism.org/facts/eng/pdf/indicators/Top25_ita.pdf  | title = World's top 25 tourist destinations| publisher = World Tourism}}</ref>
