*Empty MediaWiki Message*

--- a/اساسي_قانون.mw
+++ b/اساسي_قانون.mw
@@ -1,4 +1,4 @@
-{{for|the ship|USS Constitution}}
+{{ژباړل}}
 {{for|individual national constitutions|List of national constitutions }}
 [[Image:constitu.jpg|right|250px|Constitution of the United States]]
 A '''constitution''' is a system, often [[codified]] in a written document, which establishes the rules and principles by which an organization is governed. In the case of countries this term refers specifically to a national constitution, which defines the fundamental [[politics|political]] principles and establishes the [[power (sociology)|power]] and [[duty|duties]] of each government. Most national constitutions also guarantee certain [[right]]s to the people. Historically, before the evolution of modern-style, codified national constitutions, the term ''constitution'' could be applied 
