*Empty MediaWiki Message*

--- a/تلويزون.mw
+++ b/تلويزون.mw
@@ -1,4 +1,4 @@
-[[Image:Braun HF 1.jpg|thumb|left|[[Braun (company)|Braun HF 1]], [[Germany]], 1959]]
+{{ژباړل}}[[Image:Braun HF 1.jpg|thumb|left|[[Braun (company)|Braun HF 1]], [[Germany]], 1959]]
 [[Image:Fernseher.jpg|thumb|Clivia II FER858A (VEB Rafena, Radeberg, Germany), 1956]]
 ټلوېزون يوه داسې اله ده ، چې د غږ او انځور په مرسته پيغام خپروي. د ټلوېزيون ايجاد او د خپرونو پيل په خپل شاليد کې يو پر زده پورې تاريخ لري. ټلوېزيون ته د نوي پېر نړۍ هېنداره ويلاى شي. د ټلوېزون له لارې موږ پر کور ناست د نړۍ چکر وهو او په نړۍ کې د پېښې شوې مهمې او ارزښتمنې پېښې په خپلو سترګو وينو. ټلوېزيون پروګرام تر موږ پورې له کوم ټلوېزون سټېشن څخه را رسېږي، چې ټلوېزون مرکز ورته ويل کېږي. ځينې پروګرامونه له ټلوېزون مرکز پرته نيغ په نيغه هم خپرېږي. دغه خپرونې د کامرو او فيته ثبتوونکيو( Tape Recorders) په مرسته خوندي کېږي هم او د اړتيا پر مهال د ټلوېزون مرکزونو څخه بيا خپرېږېداى شي. د ټلوېزون د ايجاد او خپرونو په اړه پر تفصيلاتو له پوهېدنې تر مخه د ټلوېزون پر معنى او مفهوم پوهيدنه اړينه ده.
 
