*Empty MediaWiki Message*

--- a/ورځپاڼه.mw
+++ b/ورځپاڼه.mw
@@ -1,5 +1,4 @@
-
-'''ورځپاڼه''' يوه داسې خپرونه ده چې په ځان کې ورځيني تاوده خبرونه، مالومات او خبرتياوې لري. اکثراً دغه مالومات په يو ټيټ-بيه کاغذ باندې چې د اخباري کاغذ په نامه يادېږي چاپېږي. ورځپاڼې کېدلای شي چې د ټولو او يا هم د يوې ځانګړې ګټې پخاطر، د دود له مخې هره ورځ او يا هم اوونيز خپرونې وکړي.
+{{ژباړل}}'''ورځپاڼه''' يوه داسې خپرونه ده چې په ځان کې ورځيني تاوده خبرونه، مالومات او خبرتياوې لري. اکثراً دغه مالومات په يو ټيټ-بيه کاغذ باندې چې د اخباري کاغذ په نامه يادېږي چاپېږي. ورځپاڼې کېدلای شي چې د ټولو او يا هم د يوې ځانګړې ګټې پخاطر، د دود له مخې هره ورځ او يا هم اوونيز خپرونې وکړي.
 لومړنۍ چاپي ورځپاڼه په ۱۶۰۵ زېږيز کال کې خپره شوه، and the form has thrived even in the face of competition from technologies such as [[radio]], [[television]], and the [[internet]]. Recent developments on the internet are, however, posing major challenges to the business model of many newspapers. Paid circulation is declining in most countries, and advertising revenue, which makes up the bulk of most newspapers' income, is shifting from print to online, resulting in a general decline in newspaper profits. This has led to some predictions that newspapers’ role in society will shrink or even disappear, although historically, new media technologies such as radio and television never supplanted print media. 
 
 ==منځپانګه==
