*Empty MediaWiki Message*

--- a/انټرنېټ.mw
+++ b/انټرنېټ.mw
@@ -1,4 +1,4 @@
-{{portal}}
+{{ژباړل}}{{portal}}
 {{dablink|For the more general networking concept, see [[computer network]], [[computer networking]], and [[internetworking]].}}
 <!-- The Internet and the World Wide Web are different concepts - please do not muddle them in this article -->
 
