*Empty MediaWiki Message*

--- a/اقتصاد.mw
+++ b/اقتصاد.mw
@@ -1,4 +1,4 @@
-{{dablink|For other meanings see [[Economy (disambiguation)]].}}
+{{ژباړل}}
 
 '''Economy''' refers to the human activities related with the production, distribution, exchange, and consumption of goods and services. However, its definition transformed throughout history with the activities attributed to economy. The composition of a given economy is inseparable from civilization's [[history]] and [[social organization]], and from Earth's [[geography]] and [[ecology]], e.g. ecoregions which represent different [[agricultural]] and [[resource extraction]] opportunities, among other factors. 
 
