*Empty MediaWiki Message*

--- a/بشري_حقونه.mw
+++ b/بشري_حقونه.mw
@@ -1,4 +1,4 @@
-{{rights}}
+{{ژباړل}}
 '''Human rights''' refers to the concept of [[human beings]] as having universal [[natural rights]], or status, regardless of legal [[jurisdiction]] or other [[localizing factor]]s, such as [[ethnicity]], [[nationality]], and [[sex]]. As is evident in the [[United Nations]] [[Universal Declaration of Human Rights]], human rights, at least in the post-war period, are conceptualized as based on inherent [[human dignity]], retaining their universal and inalienable character.
 
 The existence, validity and the content of human rights continue to be the subject to debate in [[philosophy]] and [[political science]]. Legally, human rights are defined in [[international law]] and [[covenants]], and further, in the [[domestic law]]s of many states. However, for many people the [[doctrine]] of human rights goes beyond law and forms a fundamental moral basis for regulating the contemporary [[geo-political]] order. For them, they are [[democratic ideals]].
