*Empty MediaWiki Message*

--- a/زرتشتیان.mw
+++ b/زرتشتیان.mw
@@ -1,4 +1,4 @@
-{{Zoroastrianism}}
+{{ژباړل}}
 
 '''Zoroastrianism''' is the religion and philosophy based on the teachings ascribed to the prophet [[Zoroaster]] (Zarathustra, Zartosht). '''Mazdaism''' is the religion that acknowledges the divine authority of [[Ahura Mazda]], proclaimed by Zoroaster to be the one uncreated Creator of all (God). 
 
