--- a/بوديزم.mw
+++ b/بوديزم.mw
@@ -1,4 +1,4 @@
-{{Buddhism}}
+{{ژباړل}}
 
 '''Buddhism''' is a [[Dharmic religions|dharmic]], [[Nontheism|non-theistic]] [[religion]], a [[philosophy]], and a system of [[psychology]]. Buddhism is also known in Sanskrit or Pali, the main ancient languages of Buddhists, as [[Dharma (Buddhism)|Buddha Dharma or Dhamma]], which means the teachings of "the Awakened One". Thus was called [[Siddhartha Gautama]], hereinafter referred to as "the Buddha". Early sources say that the Buddha was born in [[Lumbini]] (now in Nepal), and that he died aged around 80 in [[Kushinagar]] (India). He lived in or around the fifth century [[BCE]], according to recent scholarship<ref>http://indology.info/papers/cousins/</ref>. Buddhism spread throughout the [[Indian subcontinent]] in the [[Timeline of Buddhism#Before Common Era|five centuries]] following the Buddha's passing, and thence into [[Central Asia|Central]], [[Southeast Asia|Southeast]] and [[East Asia]] and [[Eastern Europe]] over the next [[Timeline of Buddhism#Common Era|two millennia]].
 
