*Empty MediaWiki Message*

--- a/يهوديت.mw
+++ b/يهوديت.mw
@@ -1,4 +1,4 @@
-'''يهوديت''' د يهودانو د مذهب نوم دی. دا د لرغونو عبرانيانو او د يهودانو د پاتې شوونکو دين دی چې بنسټ يې د يهودانو کتاب تورات ايښی دی. 
+{{ژباړل}}'''يهوديت''' د يهودانو د مذهب نوم دی. دا د لرغونو عبرانيانو او د يهودانو د پاتې شوونکو دين دی چې بنسټ يې د يهودانو کتاب تورات ايښی دی. 
 {{otheruses4|the Jewish religion|consideration of ethnic, historic, and cultural aspects of the Jewish identity|Jew}}
 [[Image:Judaica.jpg|thumb|250px|Judaica (clockwise from top): [[Shabbat]] candlesticks, [[Ritual washing in Judaism|handwashing cup]], [[Chumash (Judaism)|Chumash]] and [[Tanakh]], [[Sefer Torah|Torah]] [[yad|pointer]], [[shofar]], and [[etrog]] box]]
 
