robot  Adding: [[ksh:Shiile]]

--- a/چیلی.mw
+++ b/چیلی.mw
@@ -366,6 +366,7 @@ The [[coat of arms]] depicts the two national animals: the [[condor]] (''Vultur 
 [[kn:ಚಿಲಿ]]
 [[ko:칠레]]
 [[ks:Cilē]]
+[[ksh:Shiile]]
 [[kw:Chile]]
 [[la:Chilia]]
 [[lad:Chile]]
