*Empty MediaWiki Message*

--- a/القاعده.mw
+++ b/القاعده.mw
@@ -2,7 +2,7 @@
 *[[اسامه بن لادن]]
 *[[ملا محمد عمر اخوند]]
 *[[طالبان]]
-
+*[[ابو محمد]]
 [[وېشنيزه:افغانستان]]
 [[وېشنيزه:القاعدې]]
 
@@ -52,25 +52,5 @@
 [[ms:Al Qaeda]]
 [[nl:Al Qaida]]
 [[nn:Al-Qaida]]
-[[no:Al-Qaida]]
-[[pl:Al-Kaida]]
-[[pt:Al-Qaeda]]
-[[ro:Al-Qaida]]
-[[ru:Аль-Каида]]
-[[scn:Al-Qaida]]
-[[sh:Al Kaida]]
-[[simple:Al-Qaeda]]
-[[sk:Al-Ká’ida]]
-[[sl:Al Kaida]]
-[[sr:Ал-Каида]]
-[[sv:Al-Qaida]]
-[[ta:அல் கைடா]]
-[[th:อัลกออิดะห์]]
-[[tr:El Kaide]]
-[[uk:Аль-Каїда]]
-[[ur:القاعدہ]]
-[[uz:Al-Qoida]]
-[[vi:Al-Qaeda]]
-[[wuu:基地 (恐怖组织)]]
-[[yi:אל-קאידא]]
+
 [[zh:基地組織]]
