*Empty MediaWiki Message*

--- a/جمال_شاه.mw
+++ b/جمال_شاه.mw
@@ -1,1 +1,8 @@
 [[Image:Jamal_shah.jpg|thumb|289px|جمال شاه]]
+'''جمال شاه''' په افغانستان کې زيږيدلى.
+
+د هنر په بيلا بيلو برخو لکه سندرې ويل، کمپوز، د تمثيل د هنري پارچو ليکوال، ډايرکتر او لوبغاړى دى.
+
+ښاغلى جمال شاه د رسامۍ د هنر يو برلاسه نقاش دى چې په لس گونه نندارتونو نه يې د ليدونکو لپاره په بيلا بيلو وختونو کې پرانيستې دى.
+
+په تلويزيوني نندارو او فلمونو کې برلاس لري.
