*Empty MediaWiki Message*

--- a/کړنی_سېک.mw
+++ b/کړنی_سېک.mw
@@ -1,7 +1,7 @@
 {{ژباړل}}
 [[Image:Action potential vert.png|thumb|350px|'''A.''' A schematic view of an idealized action potential illustrates its various phases as the action potential passes a point on a [[cell membrane]]. '''B.''' Actual recordings of action potentials are often distorted compared to the schematic view because of variations in [[electrophysiology|electrophysiological]] techniques used to make the recording]]
 
-کړنی-سېک يوه داسې برېښناييزه څپه ده چې د سلولونو پر پردې خپل مزل وهي. کړنی-سېک د حېواني ژوند يو اهم توکی دی، او د نسجونو تر مېنځ په ډېرې چټکۍ سره د مالوماتو لېږدنه رالېږدنه د همدغې څپې کار دی. کړني-سېکونه په بوټو کې هم پېښېږي. همدا څپې د بېلابېلو سلولونو لخوا جوړېږي، خو په لويه کچه د عصبي غونډال لخوا ډېر زيات د نيورانونو تر مېنځ د مواصلاتو له لارې د مالوماتو لېږلو لپاره کارېږي، ددې تر څنګ د نيورانونو نه د بدن نورو نسجونو ته لکه عضلاتي نسجونو او مرغړيو ته هم د مالوماتو د لېږد په چارو کې همدا څپې کارول کېږي.
+کړنی-سېک يوه داسې برېښناييزه څپه ده چې د سلولونو پر پردې خپل مزل وهي. کړنی-سېک د حېواني ژوند يو اهم توکی دی، او د نسجونو تر مېنځ په ډېرې چټکۍ سره د مالوماتو لېږدنه رالېږدنه د همدغې څپې کار دی. کړني-سېکونه په بوټو کې هم پېښېږي. همدا څپې د بېلابېلو سلولونو لخوا جوړېږي، خو په لويه کچه د عصبي غونډال لخوا ډېر زيات د نيورانونو تر مېنځ د مواصلاتو له لارې د مالوماتو لېږلو لپاره کارېږي، ددې تر څنګ د نيورانونو نه د بدن نورو نسجونو ته لکه عضلاتي نسجونو او مرغړيو ته هم د مالوماتو د لېږد په چارو کې همدا څپې کارېږي.
 
 په بېلابېلو سلولونو کې کړني-سېکونه ټول يوشانتې نه دي او آن په يوه سلول کې د ځانګړنو او د سلول په بېلابېلو برخو کې د کړني-سېکونو کچه يوشی نه ده. د ساري په توګه د زړه کړني-سېکونه په ښکاره توګه د ډېريو نيورانونو د کړني-سېکونو سره خورا توپير لري. دا ليکنه په ځانګړې توګه د يوه ټيپيک يا عام کړني-سېک په هکله چې په اکسونونو کې پېښېږي ليکل شوې.
 ==يوه کتنه==
