*Empty MediaWiki Message*

--- a/باکټريا.mw
+++ b/باکټريا.mw
@@ -1,3 +1,110 @@
 '''باکټريا''' د يوسلولي مايکرواورګانيزمونو د يوې لويې ډلې نوم دی. په عادي توګه د باکټريا اوږدوالی له يو څو مايکروميټرو نه زيات نه دی او دغه يوسلولي ډله د کروي، تاوراتاو او استواني بڼو نه نيولې ګڼ شمېر بڼې لري. د باکټريا نوم د يوناني ژبې βακτήριον نه اخيستل شوی چې د همدې نوم مانا واړه توکي دي. باکټريا د زمکې په هر ډول چاپېريال کې موندل کېږي، همداسې دغه مايکرواورګانيزم په هر ډول چاپېريال، لکه خاوره، د اسيدو تاوده لښتي، راډيواکټيف فضلې موادو،  په اوبو، د زمکې په ژوره برخه او همدا شان په عضوي توکو، په ژونديو بوټو او ژويو  کې ژوند، برار او وده  کولای شي.
 په يوه ګرام خاوره کې د باکټريا ۴۰ ميليونه سلولونه موندل ژوند کوي او په تازه اوبو کې د دغه مايکرواورګانيزم يو ميليون سلولونه اوسېږي، د زمکې پر سر نژدې پينځه نونيليون (۵×۱۰۳۰) باکټريا شته چې همدوی د نړۍ د ژونکتلې ډېرۍ برخه جوړوي.
 باکټريا د تغذيوي توکو په بياجوړېدنه کې حياتي دنده ترسره کوي، د تغذيوي څرخونو اهم پړاوونه همدغه اورګانيزمونو ته اړ دي د ساري په توګه له اتموسفير او د پروټينو د خوساکېدنې په کړنه کې د نايټروجن جوړېدنه.
+
+
+
+
+
+
+
+
+
+
+
+
+
+[[Category:Bacteria|*]]
+[[Category:Bacteriology]]
+[[Category:Microbiology]]
+
+{{Link FA|cs}}
+{{Link FA|es}}
+{{Link FA|hu}}
+{{Link FA|no}}
+{{Link FA|uk}}
+
+[[af:Bakterie]]
+[[ar:بكتيريا]]
+[[an:Eubacteria]]
+[[ay:Jisk'a laq'u]]
+[[az:Bakteriya]]
+[[bn:ব্যাক্টেরিয়া]]
+[[zh-min-nan:Sè-khún]]
+[[bs:Bakterije]]
+[[br:Bakteri]]
+[[bg:Бактерии]]
+[[ca:Eubacteri]]
+[[cs:Bakterie]]
+[[cy:Bacteria]]
+[[da:Bakterie]]
+[[de:Bakterien]]
+[[et:Bakterid]]
+[[el:Βακτήριο]]
+[[es:Bacteria]]
+[[eo:Bakterioj]]
+[[eu:Bakterio]] 
+[[fa:باکتری]]
+[[fo:Bakteria]]
+[[fr:Bacteria]]
+[[ga:Baictéar]]
+[[gl:Bacteria]]
+[[ko:세균]]
+[[hi:जीवाणु]]
+[[hsb:Bakterije]]
+[[hr:Bakterije]]
+[[io:Bakterio]]
+[[ilo:Bacteria]]
+[[id:Bakteri]]
+[[ia:Bacterio]]
+[[is:Gerlar]]
+[[it:Bacteria]]
+[[he:חיידקים]]
+[[kn:ಬ್ಯಾಕ್ಟೀರಿಯ]]
+[[ka:ბაქტერიები]]
+[[sw:Bakteria]]
+[[ku:Bakterî]]
+[[la:Bacterium]]
+[[lv:Baktērija]]
+[[lb:Bakterien]]
+[[lt:Bakterijos]]
+[[hu:Baktériumok]]
+[[mk:Бактерија]]
+[[ml:ബാക്റ്റീരിയ]]
+[[mr:जीवाणू]]
+[[ms:Bakteria]]
+[[nah:Nemiltōpīllōtl]]
+[[nl:Bacterie]]
+[[ja:真正細菌]]
+[[no:Bakterier]]
+[[nn:Bakterie]]
+[[nrm:Bactéthie]]
+[[oc:Bactèri]]
+[[nds:Bakterien]]
+[[pl:Bakterie]]
+[[pt:Bactéria]]
+[[kaa:Bakteriya]]
+[[ro:Bacterie]]
+[[qu:Añaki]]
+[[ru:Бактерии]]
+[[sah:Бактерия]]
+[[simple:Bacteria]]
+[[sk:Baktérie]]
+[[sl:Bakterije]]
+[[sr:Бактерија]]
+[[sh:Bakterija]]
+[[su:Baktéri]]
+[[fi:Bakteerit]]
+[[sv:Bakterier]]
+[[tl:Bakterya]]
+[[ta:கோலுரு நுண்ணுயிர்]]
+[[te:బాక్టీరియా]]
+[[th:แบคทีเรีย]]
+[[vi:Vi khuẩn]]
+[[tg:Бактерия]]
+[[tr:Bakteri]]
+[[uk:Бактерії]]
+[[wa:Bactereye]]
+[[yi:באקטעריע]]
+[[bat-smg:Bakterėjės]]
+[[zh:细菌]]
