*Empty MediaWiki Message*

--- a/باکټريا.mw
+++ b/باکټريا.mw
@@ -14,9 +14,9 @@
 
 
 
-[[Category:Bacteria|*]]
-[[Category:Bacteriology]]
-[[Category:Microbiology]]
+[[وېشنيزه:باکټريا|*]]
+[[وېشنيزه:باکټرياپوهنه]]
+[[وېشنيزه:مايکروژونپوهنه]]
 
 {{Link FA|cs}}
 {{Link FA|es}}
@@ -41,6 +41,7 @@
 [[de:Bakterien]]
 [[et:Bakterid]]
 [[el:Βακτήριο]]
+[[en:Bacteria]]
 [[es:Bacteria]]
 [[eo:Bakterioj]]
 [[eu:Bakterio]] 
