--- a/باکټريا.mw
+++ b/باکټريا.mw
@@ -1,3 +1,40 @@
+{{Taxobox
+| color = lightgrey
+| name = Bacteria
+| fossil_range = [[Archean]] or earlier - Recent
+| image = EscherichiaColi NIAID.jpg
+| image_width = 210px
+| image_caption = ''[[Escherichia coli]]'' image is 8 [[micrometre]]s wide.
+| domain = '''Bacteria'''
+| subdivision_ranks = Phyla<ref>{{cite web |url=http://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?mode=Undef&id=2&lvl=3&lin=f&keep=1&srchmode=1&unlock |title=Bacteria (eubacteria) |accessdate=2008-09-10 |work=Taxonomy Browser |publisher=NCBI |date= }}</ref>
+| subdivision =
+*'''[[gram positive]]/no [[Bacterial outer membrane|outer membrane]]'''<br />
+[[Actinobacteria]] (high-[[GC-content|G+C]])<br />
+[[Firmicutes]] (low-[[GC-content|G+C]])<br />
+[[Tenericutes]] (no [[Cell wall|wall]])<br />
+*'''[[gram negative]]/[[Bacterial outer membrane|outer membrane]] present'''<br />
+[[Aquificae]]<br />
+[[Bacteroidetes]]/[[Chlorobi]]<br />
+[[Chlamydiae]]/[[Verrucomicrobia]]<br />
+[[Deinococcus-Thermus]]<br />
+[[Fusobacteria]]<br />
+[[Gemmatimonadetes]]<br />
+[[Nitrospirae]]<br />
+[[Proteobacteria]]<br />
+[[Spirochaete]]s<br />
+[[Synergistetes]]<br />
+*'''unknown/ungrouped'''<br />
+[[Acidobacteria]]<br />
+[[Chloroflexi]]<br />
+[[Chrysiogenetes]]<br />
+[[Cyanobacteria]]<br />
+[[Deferribacteraceae|Deferribacteres]]<br />
+[[Dictyoglomi]]<br />
+[[Fibrobacteres]]<br />
+[[Planctomycetes]]<br />
+[[Thermodesulfobacteria]]<br />
+[[Thermotogae]]<br />
+}}
 '''باکټريا''' د يوسلولي مايکرواورګانيزمونو د يوې لويې ډلې نوم دی. په عادي توګه د باکټريا اوږدوالی له يو څو مايکروميټرو نه زيات نه دی او دغه يوسلولي ډله د کروي، تاوراتاو او استواني بڼو نه نيولې ګڼ شمېر بڼې لري. د باکټريا نوم د يوناني ژبې βακτήριον نه اخيستل شوی چې د همدې نوم مانا واړه توکي دي. باکټريا د زمکې په هر ډول چاپېريال کې موندل کېږي، همداسې دغه مايکرواورګانيزم په هر ډول چاپېريال، لکه خاوره، د اسيدو تاوده لښتي، راډيواکټيف فضلې موادو،  په اوبو، د زمکې په ژوره برخه او همدا شان په عضوي توکو، په ژونديو بوټو او ژويو  کې ژوند، برار او وده  کولای شي.
 په يوه ګرام خاوره کې د باکټريا ۴۰ ميليونه سلولونه موندل ژوند کوي او په تازه اوبو کې د دغه مايکرواورګانيزم يو ميليون سلولونه اوسېږي، د زمکې پر سر نژدې پينځه نونيليون (۵×۱۰۳۰) باکټريا شته چې همدوی د نړۍ د ژونکتلې ډېرۍ برخه جوړوي.
 باکټريا د تغذيوي توکو په بياجوړېدنه کې حياتي دنده ترسره کوي، د تغذيوي څرخونو اهم پړاوونه همدغه اورګانيزمونو ته اړ دي د ساري په توګه له اتموسفير او د پروټينو د خوساکېدنې په کړنه کې د نايټروجن جوړېدنه.
