*Empty MediaWiki Message*

--- a/باکټريا.mw
+++ b/باکټريا.mw
@@ -1,6 +1,6 @@
 {{Taxobox
 | color = lightgrey
-| name = Bacteria
+| name = باکټريا
 | fossil_range = [[Archean]] or earlier - Recent
 | image = EscherichiaColi NIAID.jpg
 | image_width = 210px
