*Empty MediaWiki Message*

--- a/نوروز_منگل.mw
+++ b/نوروز_منگل.mw
@@ -9,3 +9,8 @@
 نوروز منگل تر اوسه په نړيوالو لوبو کې د افغانستان لپاره د ٣١ مندو په اوسط ٨٣٧ مندې جوړې کړي چې تر ټولو ډيرې يې ٧٨ منډي دي .
 
 دۀ ١٦ مخالف لوبغاړي هم سوځولي چې تر ټولو ښه لوبه يې د ٢٤ منډو په بدل کې د پنځو لوبغاړو سوځول و ، په بالينگ کې د دۀ اوسط د ١٩ منډو دى .
+
+
+
+
+[[وېشنيزه:د کرکټ ملي لوبډله]]
