--- a/ابو_الکلام_آزاد.mw
+++ b/ابو_الکلام_آزاد.mw
@@ -32,7 +32,12 @@
 
 
 [[وېشنيزه:فلسفه]]
-[[وېشنيزه:پښتانه]]
+[[وېشنيزه:هندي فيلسوفان]]
+[[وېشنيزه:هندي عالمان]]
+[[وېشنيزه:ختيز فيلسوفان]]
+
+
+
 
 [[ar:أبو الكلام آزاد]]
 [[bn:আবুল কালাম মহিউদ্দিন আহমেদ (মাওলানা আজাদ)]]
