*Empty MediaWiki Message*

--- a/محمود_خان_اڅکزی.mw
+++ b/محمود_خان_اڅکزی.mw
@@ -1,4 +1,4 @@
-[[Image:Mahmood_achakzai.gif|thumb|290px|محمود خان اڅکزی]]
+{{ژباړل}}[[Image:Mahmood_achakzai.gif|thumb|290px|محمود خان اڅکزی]]
 
 Pakhtoon nationalist leader Mahmood Khan Achakzai, who is also chairman of the Pakhtoonkhwa Milli Awami Party (PkMAP), was born in 1948. His father, Abdul Samad Khan Achakzai, was himself a famous Pakhtoon nationalist leader who remained behind the bars for almost three decades before being eventually killed in a mysterious bomb blast in the 1970s. The young Achakzai did his BSc in Engineering in 1971 from University of Engineering and Technology (UET), Peshawar. A staunch nationalist and democrat, he is widely respected among progressive circles for his principled stance on human rights and rule of law.
 
