robot  Adding: [[ug:Yamayka]]

--- a/جمايکا.mw
+++ b/جمايکا.mw
@@ -353,6 +353,7 @@ The American film [[Cocktail (film)|Cocktail]], starring [[Tom Cruise]], is one 
 [[th:ประเทศจาเมกา]]
 [[tl:Hamayka]]
 [[tr:Jamaika]]
+[[ug:Yamayka]]
 [[uk:Ямайка]]
 [[ur:جمیکا]]
 [[uz:Yamayka]]
