*Empty MediaWiki Message*

--- a/بدخشان_ولايت.mw
+++ b/بدخشان_ولايت.mw
@@ -44,6 +44,7 @@
 [[Category:افغانستان]]
 [[Category:د افغانستان ولايتونه]]
 
+[[bg:Бадакшан]]
 [[ar:ولاية بدخشان]]
 [[ast:Badajshán]]
 [[bn:বাদাখশন প্রদেশ]]
