*Empty MediaWiki Message*

--- a/بغلان_ولايت.mw
+++ b/بغلان_ولايت.mw
@@ -45,6 +45,7 @@
 [[Category:افغانستان]]
 [[Category:د افغانستان ښارونه]]
 
+[[bg:Баглан]]
 [[ar:ولاية بغلان]]
 [[ast:Baglan]]
 [[cy:Baghlan (talaith)]]
