--- a/هایتي.mw
+++ b/هایتي.mw
@@ -295,6 +295,7 @@ Although Haiti averages about 700 people per square mile (270/km²), its populat
 [[tl:Hayti]]
 [[tr:Haiti]]
 [[tt:Haiti]]
+[[ug:Hayti]]
 [[uk:Гаїті]]
 [[ur:ہیٹی]]
 [[uz:Gaiti]]
