*Empty MediaWiki Message*

--- a/هستي_گل_عابد.mw
+++ b/هستي_گل_عابد.mw
@@ -14,3 +14,4 @@
 
 دۀ تر اوسه د ١٦.١٦ په اوسط ٣٦ لوبغاړي هم سوځولي چې تر ټولو غوره بالين يې د ١٧ منډو په بدل کې د درو لوبغاړو سوځول و .
 [[وېشنيزه:د کرکټ ملي لوبډله]]
+[[انځور:هستيګل_عابد.jpg]]
