*Empty MediaWiki Message*

--- a/محمد_نبي.mw
+++ b/محمد_نبي.mw
@@ -12,3 +12,4 @@
 
 د دۀ تر ټولو ډيرې مندې ١١٢ دي او تر ټولو ښه بالينگ يې د ٣٠ منډو په بدل کې د پنځو لوبغاړو سوځول و .
 [[وېشنيزه:د کرکټ ملي لوبډله]]
+[[انځور:محمد_نبي_عيساخېل.jpg‏ ]]
