*Empty MediaWiki Message*

--- a/محمد_اصغر_ستانکزی.mw
+++ b/محمد_اصغر_ستانکزی.mw
@@ -10,3 +10,4 @@
 اصغر ستانکزي تر اوسه ٣٧٦ منډې کړي دي د دۀ تر ټولو ډيرې منډې ١٠٢ دي او اوسط يې ١٩.٧٨ دى . 
 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
+[[انځور:محمد_اصغر_ستانکزی.jpg]]
