*Empty MediaWiki Message*

--- a/کريم_صادق.mw
+++ b/کريم_صادق.mw
@@ -11,3 +11,4 @@
 کريم صادق تر اوسه د افغانستان لپاره ٧٤٢ مندې کړي دي او د منډو اوسط يې ٢٥.٥٨ دى .
 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
+[[انځور:کريم_صادق.jpg]]
