*Empty MediaWiki Message*

--- a/رشيد_ځدراڼ.mw
+++ b/رشيد_ځدراڼ.mw
@@ -1,4 +1,5 @@
 رشيد ځدراڼ هم يو له ويکټ ساتونکو دى چې ډيره هيله ترې کيږي
 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
-[[انځور:انځور:رشيد ځدراڼ.jpg]]
+
+[[انځور:رشيد ځدراڼ.jpg]]
