--- a/احمد_شاه_احمدي.mw
+++ b/احمد_شاه_احمدي.mw
@@ -9,3 +9,4 @@
 
 احمد شاه احمدي تر اوسه د افغانستان لپاره ٤٠٩ منډې د ٢٤.٠٥ په اوسط کې کړي دي . دۀ د ١٤.٥٠ په اوسط ٢٦ کسان هم سوځولي دي ، د احمد شاه تر ټولو غوره بالينگ د ١٧ منډو په بدل کې د درو کسانو سوځول و . 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
+[[انځور:احمد شاه.jpg]]
