robot  Adding: [[arz:السودان]]

--- a/سوډان.mw
+++ b/سوډان.mw
@@ -326,6 +326,7 @@ Institutions of higher education in the Sudan include:
 [[ang:Sudan]]
 [[ar:السودان]]
 [[arc:ܣܘܕܢ]]
+[[arz:السودان]]
 [[ast:Sudán]]
 [[az:Sudan]]
 [[bat-smg:Sudans]]
