robot  Adding: [[arz:اثيوبيا]]

--- a/ایتوپیا.mw
+++ b/ایتوپیا.mw
@@ -371,6 +371,7 @@ Ethiopia produces some of the finest athletes of the world, most notably [[middl
 [[an:Etiopia]]
 [[ar:إثيوبيا]]
 [[arc:ܟܘܫ]]
+[[arz:اثيوبيا]]
 [[ast:Etiopía]]
 [[az:Efiopiya]]
 [[bat-smg:Etiuopėjė]]
