robot  Adding: [[arz:سلوفاكيا]]

--- a/سلواکیا.mw
+++ b/سلواکیا.mw
@@ -255,6 +255,7 @@ Slovakia, being an ancient land in the heart of Europe, features interesting nat
 [[ang:Slofacia]]
 [[ar:سلوفاكيا]]
 [[arc:ܣܠܘܒܩܝܐ]]
+[[arz:سلوفاكيا]]
 [[ast:Eslovaquia]]
 [[az:Slovakiya]]
 [[bar:Slowàkai]]
