--- a/استونیا.mw
+++ b/استونیا.mw
@@ -235,6 +235,7 @@ There are also a number of smaller Protestant and [[Jewish]] groups, as well as 
 [[ang:Estland]]
 [[ar:إستونيا]]
 [[arc:ܐܣܛܘܢܝܐ]]
+[[arz:استونيا]]
 [[ast:Estonia]]
 [[az:Estoniya]]
 [[bar:Estlãnd]]
