robot  Adding: [[arz:فينلاندا]]

--- a/فینلنډ.mw
+++ b/فینلنډ.mw
@@ -320,6 +320,7 @@ Retail stores are prohibited by law from doing business on Sundays, except durin
 [[ang:Finnland]]
 [[ar:فنلندا]]
 [[arc:ܦܢܠܢܕܐ]]
+[[arz:فينلاندا]]
 [[ast:Finlandia]]
 [[az:Finlandiya]]
 [[bar:Finnlånd]]
