--- a/سویډن.mw
+++ b/سویډن.mw
@@ -434,6 +434,7 @@ Professional [[Skateboarding|skateboarders]] include [[Pontus Alv]], [[Matthias 
 [[ang:Sƿēoland]]
 [[ar:السويد]]
 [[arc:ܣܘܝܕ]]
+[[arz:السويد]]
 [[ast:Suecia]]
 [[az:İsveç]]
 [[bar:Schwen]]
