robot  Adding: [[arz:لوكسيمبورج]]

--- a/لوگزامبورگ.mw
+++ b/لوگزامبورگ.mw
@@ -194,6 +194,7 @@ The country has produced some internationally-known artists, including the paint
 [[ang:Letseburh]]
 [[ar:لوكسمبورغ]]
 [[arc:ܠܘܟܣܡܒܘܪܓ]]
+[[arz:لوكسيمبورج]]
 [[ast:Luxemburgu]]
 [[az:Lüksemburq]]
 [[bar:Luxmburg]]
