--- a/فيض_آباد_(بدخشان).mw
+++ b/فيض_آباد_(بدخشان).mw
@@ -4,6 +4,7 @@
 
 [[Category:د افغانستان ښارونه]]
 
+[[bg:Файзабад]]
 [[ast:Feyzabad]]
 [[cy:Fayzabad (Afghanistan)]]
 [[de:Faizabad (Afghanistan)]]
