*Empty MediaWiki Message*

--- a/باميان_ولايت.mw
+++ b/باميان_ولايت.mw
@@ -67,6 +67,7 @@ Image:Welome Sign, Bamiyan, Welcome to Bamyan Ancient City, 2007.jpg|Welcome sig
  
 [[وېشنيزه:د افغانستان ولايتونه]]
 
+[[bg:Бамян]]
 [[ar:ولاية باميان]]
 [[cs:Bamján (provincie)]]
 [[cy:Bamiyan (talaith)]]
