*Empty MediaWiki Message*

--- a/شاه_ولي_افغان.mw
+++ b/شاه_ولي_افغان.mw
@@ -1,4 +1,4 @@
-[[Image:G|thumb|289px|استاد شاه ولي]]
+[[انځور:استادشاه ولي افغان.jpg|thumb|289px|استاد شاه ولي]]
 '''استاد شاه ولي افغان''' د افغاني موسيقۍ يوه پېژندل شوې څېره ده. نومړي د سندربولۍ او موسيقۍ ډګر کې د استادۍ تر کچې زده کړې کړي چې په دې توګه يې افغانستان ته لوی وياړ ور په برخه کړی. نوموړی اوس د کاناډا په ټورنټو ښار کې د کډوالۍ شپې ورځې تېرولو سره سره افغاني موسيقۍ ته په چوپړ بوخت دی. 
 
 == مخينه ==
