*Empty MediaWiki Message*

--- a/جمال_شاه.mw
+++ b/جمال_شاه.mw
@@ -1,4 +1,6 @@
-[[Image:Jamal_shah.jpg|thumb|289px|جمال شاه]]
+[[انځور:Jamal_shah.jpg|thumb|289px|جمال شاه]]
+[[انځور:Jamal-shah.jpg|thumb|289px|جمال شاه]]
+
 '''جمال شاه''' په افغانستان کې زيږيدلى.
 
 د هنر په بيلا بيلو برخو لکه سندرې ويل، کمپوز، د تمثيل د هنري پارچو ليکوال، ډايرکتر او لوبغاړى دى.
