--- a/احمد_شاه_احمدي.mw
+++ b/احمد_شاه_احمدي.mw
@@ -1,3 +1,4 @@
+[[انځور:احمد شاه.jpg|کيڼ]]
 کيڼ لاسى منډه جوړونکى او ورو بالر دى
 د ١٩٨٣ کال د اکتوبر په ٢٠ نېټه په پکتيکا ولايت کې زيږيدلى دى
 
@@ -9,4 +10,3 @@
 
 احمد شاه احمدي تر اوسه د افغانستان لپاره ٤٠٩ منډې د ٢٤.٠٥ په اوسط کې کړي دي . دۀ د ١٤.٥٠ په اوسط ٢٦ کسان هم سوځولي دي ، د احمد شاه تر ټولو غوره بالينگ د ١٧ منډو په بدل کې د درو کسانو سوځول و . 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
-[[انځور:احمد شاه.jpg]]
