--- a/دايکندي_ولايت.mw
+++ b/دايکندي_ولايت.mw
@@ -83,6 +83,7 @@
 [[Category:افغانستان]]
 [[Category:د افغانستان ښارونه]]
 
+[[bg:Дайкунди]]
 [[ar:ولاية دايكندي]]
 [[ast:Daikondi]]
 [[de:Daikondi]]
