--- a/فراه_ولايت.mw
+++ b/فراه_ولايت.mw
@@ -102,6 +102,7 @@
 [[Category:افغانستان]]
 [[Category:د افغانستان ولايتونه]]
 
+[[bg:Фарах]]
 [[de:Farah]]
 [[et:Farāhi provints]]
 [[es:Farāh (provincia)]]
