*Empty MediaWiki Message*

--- a/بھین_چود.mw
+++ b/بھین_چود.mw
@@ -1,4 +1,4 @@
-{{delete|english, not a single word in pashto (other than the player's name of course)}}
+{{ژباړل}}
 
 {{Infobox Cricketer |
 flag = Pakistan_flag_large.png |
