*Empty MediaWiki Message*

--- a/فارياب_ولايت.mw
+++ b/فارياب_ولايت.mw
@@ -52,6 +52,7 @@
 [[وېشنيزه:افغانستان]]
 [[وېشنيزه:د افغانستان ولايتونه]]
 
+[[bg:Фаряб]]
 [[ar:ولاية فاریاب]]
 [[ast:Faryab]]
 [[cy:Faryab (talaith)]]
