robot  Modifying: fi, it, ms, pt, sv, ur

--- a/سيد_جمال_الدين_افغاني.mw
+++ b/سيد_جمال_الدين_افغاني.mw
@@ -123,15 +123,15 @@
 [[el:Τζαμάλ αλ-Ντιν αλ-Αφγάνι]]
 [[en:Jamal-al-Din Afghani]]
 [[fa:سید جمال الدین اسدآبادی]]
-[[fi:Jamal al-din al-Afghani]]
+[[fi:Jamal al-din Asadabadi]]
 [[fr:Jamal-al-Din Afghani]]
 [[he:ג'מאל א-דין אל-אפגאני]]
-[[it:Jamal al-Din al-Afghani]]
+[[it:Jamal al-Din Asadabadi]]
 [[ja:ジャマールッディーン・アフガーニー]]
-[[ms:Sayid Jamaluddin al-Afghani]]
+[[ms:Sayid Jamaluddin Asadabadi]]
 [[nl:Jamal al-Din al-Afghani]]
 [[pl:Dżamal ad-Din al-Afghani]]
-[[pt:Jamal al-Din al-Afghani]]
-[[sv:Jamal al-din al-Afghani]]
+[[pt:Jamal al-Din Asadabadi]]
+[[sv:Jamal al-din Asadabadi]]
 [[tr:Cemaleddin Afgani]]
-[[ur:جمال الدین افغانی]]
+[[ur:جمال الدین اسدآبادی]]
