*Empty MediaWiki Message*

--- a/هارون_باچا.mw
+++ b/هارون_باچا.mw
@@ -1,1 +1,2 @@
-[[Image:Haroon.jpg|thumb|289px|هارون باچا]]
+[[انځور:Haroon.jpg|thumb|289px|هارون باچا]]
+[[انځور:Bacha190.jpg|thumb|289px|هارون باچا]]
