--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -280,7 +280,7 @@ Astronomy and astrophysics have developed significant interdisciplinary links wi
 == ناڅانګواله ستورپوهنه ==
 {{main|ناڅانګواله ستورپوهنه}}
 [[انځور:Telescope trailer 22.jpg|ښي|thumb|300px|لېواله ستورپوهان کولای شي خپل اوزارونه پخپله جوړ کړي، دوی د ستورو د څارنو په خاطر ځانګړې مېلمستياوې او غونډې هم لمانځي چې يو له دغو نه يې سټېلافېن دی.]]
-Collectively, amateur astronomers observe a variety of celestial objects and phenomena sometimes with [[Amateur telescope making|equipment that they build themselves]]. Common targets of amateur astronomers include the Moon, planets, stars, comets, meteor showers, and a variety of [[deep-sky object]]s such as star clusters, galaxies, and nebulae. One branch of amateur astronomy, amateur [[astrophotography]], involves the taking of photos of the night sky. Many amateurs like to specialize in the observation of particular objects, types of objects, or types of events which interest them.<ref>{{cite web | url=http://www.amsmeteors.org/ | title = The Americal Meteor Society | accessdate = 2006-08-24 }}</ref><ref>{{cite web | first=Jerry  | last=Lodriguss | url=http://www.astropix.com/ | title = Catching the Light: Astrophotography | accessdate = 2006-08-24 }}</ref>
+نژدې ټول آماتوره ستورپوهان، په خپلو لاسو جوړو تلسکوپونو د اسماني اجرامو کتنه ترسره کوي. اکثراً د دوی ټولو يو عام هدف وي او هغه د سپوږمۍ، د سيارو، د ستورو، او لکۍ لرونکو ستوريو، د ستوريزو بارانونو او د تشيال په ژوره کې د نورو اسماني اجرامو لکه د ستورو واښکي، کهکشانونه او سحابيانو ليدنې دي. د آماتورې ستورپوهنې يوه څانګه تشياليزه انځورګري ده چې په دغه څانګه کې يو آماتوره ستورپوه په شپه کې د اسمان انځورونه اخلي. د دغو آماتورانو هڅې دا وي چې د اسماني اجرامو د ليدنې په وخت کې ځانګړی تبحر لاس ته راوړي او د خپلو ځاني لېوالتياو د پام ساتلو سره د خپل د ليدنې کړنې تر يو حده کارپوهنيزې کړي.<ref>{{cite web | url=http://www.amsmeteors.org/ | title = The Americal Meteor Society | accessdate = 2006-08-24 }}</ref><ref>{{cite web | first=Jerry  | last=Lodriguss | url=http://www.astropix.com/ | title = Catching the Light: Astrophotography | accessdate = 2006-08-24 }}</ref>
 
 Most amateurs work at visible wavelengths, but a small minority experiment with wavelengths outside the visible spectrum. This includes the use of infrared filters on conventional telescopes, and also the use of radio telescopes. The pioneer of amateur radio astronomy was [[Karl Guthe Jansky|Karl Jansky]] who started observing the sky at radio wavelengths in the [[1930s]]. A number of amateur astronomers use either homemade telescopes or use radio telescopes which were originally built for astronomy research but which are now available to amateurs (''e.g.'' the [[One-Mile Telescope]]).<ref>{{cite web | author=F. Ghigo | date = 2006-02-07 | url=http://www.nrao.edu/whatisra/hist_jansky.shtml | title = Karl Jansky and the Discovery of Cosmic Radio Waves | publisher = National Radio Astronomy Observatory | accessdate = 2006-08-24 }}</ref><ref>{{cite web | url=http://www.users.globalnet.co.uk/~arcus/cara/ | title = Cambridge Amateur Radio Astronomers | accessdate = 2006-08-24 }}</ref>
 
