--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -271,11 +271,11 @@ Gravitational aggregations clustered into filaments, leaving voids in the gaps. 
 Fundamental to the structure of the universe is the existence of [[dark matter]] and [[dark energy]]. These are now thought to be the dominant components, forming 96% of the density of the universe. For this reason, much effort is expended in trying to understand the physics of these components.<ref>{{cite web | last = Preuss | first = Paul | url=http://www.lbl.gov/Science-Articles/Archive/dark-energy.html | title = Dark Energy Fills the Cosmos | publisher = U.S. Department of Energy, Berkeley Lab | accessdate = 2006-09-08 }}</ref>
 
 ===مېنځپوهنيزې زده کړې===
-{{seealso|Cosmochemistry}}
-Astronomy and astrophysics have developed significant interdisciplinary links with other major scientific fields. These include:
-* [[Astrobiology]]: the study of the advent and evolution of biological systems in the universe.
-* [[Archaeoastronomy]]: the study of ancient or traditional astronomies in their cultural context, utilizing [[archaeology|archaeological]] and [[anthropology|anthropological]] evidence.
-* [[Astrochemistry]]: the study of the [[chemical]]s found in outer space, usually in [[Molecular cloud|molecular gas cloud]]s, and their formation, interaction and destruction. As such, it represents an overlap of the disciplines of astronomy and [[chemistry]].
+{{دا هم وګورۍ|کاسموکيميا}}
+د ستورپوهنې او ستورپېژندنې پرمختګ يوه بله اهمه مېنځپوهنيزه ډله رامېنځ ته کړې چې د ساينس د نورو ډګرونو سره تړاو پېدا کوي. دا څانګې دا دي:
+* [[ستورژوندپوهنه]]: په کايناتو کې د ژوندپوهنيزو غونډالونو د پېښو او تجريدي بشپړتابه زده کړه.
+* [[ارکيوستورپوهنه]]: the study of ancient or traditional astronomies in their cultural context, utilizing [[archaeology|archaeological]] and [[anthropology|anthropological]] evidence.
+* [[ستورکيميا]]: the study of the [[chemical]]s found in outer space, usually in [[Molecular cloud|molecular gas cloud]]s, and their formation, interaction and destruction. As such, it represents an overlap of the disciplines of astronomy and [[chemistry]].
 
 == ناڅانګواله ستورپوهنه ==
 {{main|ناڅانګواله ستورپوهنه}}
