/* مېنځپوهنيزې زده کړې */

--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -271,7 +271,7 @@ Gravitational aggregations clustered into filaments, leaving voids in the gaps. 
 Fundamental to the structure of the universe is the existence of [[dark matter]] and [[dark energy]]. These are now thought to be the dominant components, forming 96% of the density of the universe. For this reason, much effort is expended in trying to understand the physics of these components.<ref>{{cite web | last = Preuss | first = Paul | url=http://www.lbl.gov/Science-Articles/Archive/dark-energy.html | title = Dark Energy Fills the Cosmos | publisher = U.S. Department of Energy, Berkeley Lab | accessdate = 2006-09-08 }}</ref>
 
 ===مېنځپوهنيزې زده کړې===
-{{دا هم وګورۍ|کاسموکيميا}}
+{{کاسموکيميا}}
 د ستورپوهنې او ستورپېژندنې پرمختګ يوه بله اهمه مېنځپوهنيزه ډله رامېنځ ته کړې چې د ساينس د نورو ډګرونو سره تړاو پېدا کوي. دا څانګې دا دي:
 * [[ستورژوندپوهنه]]: په کايناتو کې د ژوندپوهنيزو غونډالونو د پېښو او تجريدي بشپړتابه زده کړه.
 * [[ارکيوستورپوهنه]]: the study of ancient or traditional astronomies in their cultural context, utilizing [[archaeology|archaeological]] and [[anthropology|anthropological]] evidence.
