*Empty MediaWiki Message*

--- a/جوزجان_ولايت.mw
+++ b/جوزجان_ولايت.mw
@@ -17,6 +17,7 @@
 [[Category:افغانستان]]
 [[Category:د افغانستان ښارونه]]
 
+[[bg:Джаузджан]]
 [[ar:ولاية جوزجان]]
 [[ast:Jawzjan]]
 [[de:Dschuzdschan]]
