*Empty MediaWiki Message*

--- a/کندهار_ولايت.mw
+++ b/کندهار_ولايت.mw
@@ -70,6 +70,7 @@
  
 [[Category:د افغانستان ولايتونه]]
 
+[[bg:Кандахар (провинция)]]
 [[ar:ولاية قندهار]]
 [[ast:Kandahar]]
 [[cy:Kandahar (talaith)]]
