*Empty MediaWiki Message*

--- a/کاپیسا.mw
+++ b/کاپیسا.mw
@@ -34,6 +34,7 @@
 [[Category:افغانستان]]
 [[Category:د افغانستان ولايتونه]]
 
+[[bg:Каписа]]
 [[ar:ولاية كابيسا]]
 [[ast:Kapisa]]
 [[cy:Kapisa (talaith)]]
