robot  Modifying: [[ur:جمال الدین افغانی]]

--- a/سيد_جمال_الدين_افغاني.mw
+++ b/سيد_جمال_الدين_افغاني.mw
@@ -134,4 +134,4 @@
 [[pt:Jamal al-Din Asadabadi]]
 [[sv:Jamal al-din Asadabadi]]
 [[tr:Cemaleddin Afgani]]
-[[ur:جمال الدین اسدآبادی]]
+[[ur:جمال الدین افغانی]]
