--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -273,7 +273,7 @@ Fundamental to the structure of the universe is the existence of [[dark matter]]
 ===مېنځپوهنيزې زده کړې===
 {{کاسموکيميا}}
 د ستورپوهنې او ستورپېژندنې پرمختګ يوه بله اهمه مېنځپوهنيزه ډله رامېنځ ته کړې چې د ساينس د نورو ډګرونو سره تړاو پېدا کوي. دا څانګې دا دي:
-* [[ستورژوندپوهنه]]: په کايناتو کې د ژوندپوهنيزو غونډالونو د پېښو او تجريدي بشپړتابه زده کړه.
+* [[ستورژونپوهنه]]: په کايناتو کې د ژوندپوهنيزو غونډالونو د پېښو او تجريدي بشپړتابه زده کړه.
 * [[ارکيوستورپوهنه]]: the study of ancient or traditional astronomies in their cultural context, utilizing [[archaeology|archaeological]] and [[anthropology|anthropological]] evidence.
 * [[ستورکيميا]]: the study of the [[chemical]]s found in outer space, usually in [[Molecular cloud|molecular gas cloud]]s, and their formation, interaction and destruction. As such, it represents an overlap of the disciplines of astronomy and [[chemistry]].
 
