*Empty MediaWiki Message*

--- a/محمد_داؤد_ميره_کی.mw
+++ b/محمد_داؤد_ميره_کی.mw
@@ -1,1 +1,23 @@
 [[انځور:ډاکټر داوود ميرکی.jpg|thumb|محمد داؤد ميره کی]]
+ډاکټر محمد داؤد ميره کی يو افغان سياستپوه دی چې په خپلواکه توګه يې ځان د افغانستان د روان کال د ولسمشرۍ ټولټاکنو ته کانديد کړی. نوموړی د لوړو زده کړو خاوند دی چې د افغانستان په اړه يې يو کتاب هم خپور کړی.
+
+== مخينه ==
+ډاکټر محمد داؤد ميره کی د جنرال غلام صديق ميره کي ځوی په خټه پښتون او په قوم سلېمانخېل دی. نوموړی د وردګو ولايت د چارکي د ميرک خېلو په کلي کې نړۍ ته راغلی. 
+
+== زده کړې ==
+ښاغلي ميره کي خپلې لومړنۍ زده کړې تر اتم ټولګي په افغانستان کې کړي او نهم ټولګی يې په پېښور کې د سيد جمال الدين افغان په لېسه کې بشپړ کړی او خپلې پاتې زده کړې يې په امريکا کې سر ته رسولي. په همدې توګه يې د خپلو لوړو زده کړو پيل د امريکا د ايلناي په پوهنتون کې د حقوقو او سياسي علومو په رشته کې سر ته رسولي. هغه خپله لومړنۍ ماسټري په حقوقو او نړېوالو اړيکو کې د امريکا د ايلېنای د پوهنتون څخه لاس ته راوړې. دوهمه ماسټري يې د منځني ختيځ په زده کړه کې ترلاسه کړې او بيا يې د جنګ د ختمولو په څانګه کې تخصص اخيستی دی. تر دې وړاندې يې خپله ډوکټورا په ټولنيز او اقتصادي پرمختګ کې اخيستې چې په همدې ترڅ کې يې د افغانستان د نه پرمختګ په باب خپل د ډوکټورا کتاب هم ليکلی دی. 
+
+== دندې ==
+
+== سياسي دريځ ==
+په ۲۰۰۱ عيسوي کال کې ما خپل شديد مخالفت د امريکا د يرغل په باب په راډيوګانو او تلويزونو کې وښوده ما خپل مخالفت د امريکې د وحشيانه عمل په مقابل کې د تېرو ۷ کالونو په ترڅ کې ښودلی دی. همدارنګه کله چې امريکا به افغانستان کې د يورانيمو وسله کوم چې د ټولو بين المللي قوانينو لخوا منع شوې دی استعمال کړه نو ما خپل مخالفت د دې بېن المللي جنايت مقابل کې په ډاګه وښوده او د ۲۰۰۴ عيسوي کال کې د جورج بوش په ضد په حيث د شاهد په بين المللي محکمه کې کومه چې په ټوکيو جاپان کې پرانيستل شوې وه ودرېدم. 
+نوموړی جورج بوش زما د شاهدي په ورکولو په اساس په ۱۳ مختلفو جناياتو باندې په غياب کې محکوم شو. زما هدف دا دی چې د افغانستان د ولس د عزت د مدافعې لپاره ودرېږم او افغانستان او د افغانستان د خلکو د دې بدبختۍ د بچولو لپاره زيار وباسم او د ولس چوپړ ته ودرېږم. زموږ د ولس بدبختي هغه وخت پای ته رسېږي کله چې ترغمل امريکايان او د دوی نور جنايتکاران د افغانستان څخه ووځي.
+دا چې زه د امريکا آرامه ژوند پرېږدم او هلته د ولس د چوپړ لپاره چمتو کېږم او د کفر او استعمار په مقابل کې ودرېږم دا يواځې زما د ايمان او د افغانستان سره د مينې استاځيتوب کوي. او زه چمتو يم چې خپل سر د اسلام لپاره قربان کړم.
+
+== چاپ شوي آثار ==
+
+== باندنۍ تړنې ==
+
+[[وېشنيزه:پښتانه سياستوال]]
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:د ولسمشرۍ کانديدان]]
