*Empty MediaWiki Message*

--- a/محمد_داؤد_ميره_کی.mw
+++ b/محمد_داؤد_ميره_کی.mw
@@ -1,5 +1,5 @@
 [[انځور:ډاکټر داوود ميرکی.jpg|thumb|محمد داؤد ميره کی]]
-ډاکټر محمد داؤد ميره کی يو افغان سياستپوه دی چې په خپلواکه توګه يې ځان د افغانستان د روان کال د ولسمشرۍ ټولټاکنو ته کانديد کړی. نوموړی د لوړو زده کړو خاوند دی چې د افغانستان په اړه يې يو کتاب هم خپور کړی.
+'''ډاکټر محمد داؤد ميره کی''' يو افغان سياستپوه دی چې په خپلواکه توګه يې ځان د افغانستان د روان کال د ولسمشرۍ ټولټاکنو ته کانديد کړی. نوموړی د لوړو زده کړو خاوند دی چې د افغانستان په اړه يې يو کتاب هم خپور کړی.
 
 == مخينه ==
 ډاکټر محمد داؤد ميره کی د جنرال غلام صديق ميره کي ځوی په خټه پښتون او په قوم سلېمانخېل دی. نوموړی د وردګو ولايت د چارکي د ميرک خېلو په کلي کې نړۍ ته راغلی. 
@@ -10,8 +10,11 @@
 == دندې ==
 
 == سياسي دريځ ==
-په ۲۰۰۱ عيسوي کال کې ما خپل شديد مخالفت د امريکا د يرغل په باب په راډيوګانو او تلويزونو کې وښوده ما خپل مخالفت د امريکې د وحشيانه عمل په مقابل کې د تېرو ۷ کالونو په ترڅ کې ښودلی دی. همدارنګه کله چې امريکا به افغانستان کې د يورانيمو وسله کوم چې د ټولو بين المللي قوانينو لخوا منع شوې دی استعمال کړه نو ما خپل مخالفت د دې بېن المللي جنايت مقابل کې په ډاګه وښوده او د ۲۰۰۴ عيسوي کال کې د جورج بوش په ضد په حيث د شاهد په بين المللي محکمه کې کومه چې په ټوکيو جاپان کې پرانيستل شوې وه ودرېدم. 
-نوموړی جورج بوش زما د شاهدي په ورکولو په اساس په ۱۳ مختلفو جناياتو باندې په غياب کې محکوم شو. زما هدف دا دی چې د افغانستان د ولس د عزت د مدافعې لپاره ودرېږم او افغانستان او د افغانستان د خلکو د دې بدبختۍ د بچولو لپاره زيار وباسم او د ولس چوپړ ته ودرېږم. زموږ د ولس بدبختي هغه وخت پای ته رسېږي کله چې ترغمل امريکايان او د دوی نور جنايتکاران د افغانستان څخه ووځي.
+په ۲۰۰۱ عيسوي کال يې خپل شديد مخالفت د امريکا د يرغل په باب په راډيوګانو او تلويزونو کې وښوده همدا راز يې خپل مخالفت د امريکې د وحشيانه عمل په مقابل کې د تېرو ۷ کالونو په ترڅ کې ښودلی دی. کله چې امريکا به افغانستان کې د يورانيمو وسلې، چې د ټولو نړېوالو قوانينو لخوا منع شوي، وکارولې نو هغه خپل سخت مخالفت د دې نړېوال جنايت په وړاندې په ډاګه وښوده او په ۲۰۰۴ عيسوي کال کې د جورج بوش پر ضد په نړېوالې محکمه کې چې په ټوکيو جاپان کې پرانيستل شوې وه د شاهد په حيث ودرېده. او د امريکا پخوانی ولسمشر جورج بوش د هغه د شاهدي په ورکولو په اساس په ۱۳ بېلابېلو جنايتونو باندې په غياب کې محکوم شو. 
+
+نوموړی د خپل دريځ په اړه داسې وايي:
+
+زما هدف دا دی چې د افغانستان د ولس د عزت د مدافعې لپاره ودرېږم او افغانستان او د افغانستان خلک د دې بدبختۍ نه د بچولو لپاره زيار وباسم او د ولس چوپړ ته ودرېږم. زموږ د ولس بدبختي هغه وخت پای ته رسېږي کله چې ترغمل امريکايان او د دوی نور جنايتکاران د افغانستان څخه ووځي.
 دا چې زه د امريکا آرامه ژوند پرېږدم او هلته د ولس د چوپړ لپاره چمتو کېږم او د کفر او استعمار په مقابل کې ودرېږم دا يواځې زما د ايمان او د افغانستان سره د مينې استاځيتوب کوي. او زه چمتو يم چې خپل سر د اسلام لپاره قربان کړم.
 
 == چاپ شوي آثار ==
