--- a/محمد_داؤد_ميره_کی.mw
+++ b/محمد_داؤد_ميره_کی.mw
@@ -20,7 +20,8 @@
 == چاپ شوي آثار ==
 
 == باندنۍ تړنې ==
-
+[http://www.drmirakiforpresident.com د ډاکټر ميره کي رسمي وېبپاڼه]
+[http://www.drmirakiforpresident.com د ډاکټر ميره کي رسمي وېبپاڼه]
 [[وېشنيزه:پښتانه سياستوال]]
 [[وېشنيزه:پښتانه]]
 [[وېشنيزه:د ولسمشرۍ کانديدان]]
