--- a/محمد_داؤد_ميره_کی.mw
+++ b/محمد_داؤد_ميره_کی.mw
@@ -21,7 +21,7 @@
 
 == باندنۍ تړنې ==
 *[http://www.drmirakiforpresident.com د ډاکټر ميره کي رسمي وېبپاڼه]
-*[http://www.afghanistanafterdemocracy.com د ډاکټر ميره کي بله وېبپاڼه]
+*[http://www.afghanistanafterdemocracy.com افغانستان د ولسواکۍ نه وروسته - د ډاکټر ميره کي بله وېبپاڼه]
 [[وېشنيزه:پښتانه سياستوال]]
 [[وېشنيزه:پښتانه]]
 [[وېشنيزه:د ولسمشرۍ کانديدان]]
