/* چاپ شوي آثار */

--- a/محمد_داؤد_ميره_کی.mw
+++ b/محمد_داؤد_ميره_کی.mw
@@ -18,6 +18,8 @@
 دا چې زه د امريکا آرامه ژوند پرېږدم او هلته د ولس د چوپړ لپاره چمتو کېږم او د کفر او استعمار په مقابل کې ودرېږم دا يواځې زما د ايمان او د افغانستان سره د مينې استاځيتوب کوي. او زه چمتو يم چې خپل سر د اسلام لپاره قربان کړم.
 
 == چاپ شوي آثار ==
+ښاغلي ميره کي د افغانستان د نه پرمختګ په باب يو کتاب ليکلی دی چې په همدې کتاب کې د افغانستان د بيا ودانولو او پرمختګ لپاره يې  يو فورمول په خپل کتاب کې وړاندې کړی دی.
+
 *افغانستان د ولسواکۍ نه وروسته (Afghanistan After Democracy)
 
 == باندنۍ تړنې ==
