*Empty MediaWiki Message*

--- a/محمد_داؤد_ميره_کی.mw
+++ b/محمد_داؤد_ميره_کی.mw
@@ -1,8 +1,8 @@
 [[انځور:ډاکټر داوود ميرکی.jpg|thumb|محمد داؤد ميره کی]]
-'''ډاکټر محمد داؤد ميره کی''' يو افغان سياستپوه دی چې په خپلواکه توګه يې ځان د افغانستان د روان کال د ولسمشرۍ ټولټاکنو ته کانديد کړی. نوموړی د لوړو زده کړو خاوند دی چې د افغانستان په اړه يې يو کتاب هم خپور کړی.
+'''ډاکټر محمد داؤد ميره کی''' يو افغان سياستپوه دی چې په خپلواکه توګه يې ځان د [[افغانستان]] د ۲۰۰۹ کال د ولسمشرۍ ټولټاکنو ته کانديد کړی. نوموړی د لوړو زده کړو خاوند دی چې د افغانستان په اړه يې يو کتاب هم خپور کړی.
 
 == مخينه ==
-ډاکټر محمد داؤد ميره کی د جنرال غلام صديق ميره کي ځوی په خټه پښتون او په قوم سلېمانخېل دی. نوموړی د وردګو ولايت د چارکي د ميرک خېلو په کلي کې نړۍ ته راغلی. 
+ډاکټر محمد داؤد ميره کی د جنرال غلام صديق ميره کي ځوی په خټه [[پښتانه|پښتون]] او په قوم سلېمانخېل دی. نوموړی [[د وردګ ولايت|د وردګو ولايت]] د چارکي د ميرک خېلو په کلي کې نړۍ ته راغلی. 
 
 == زده کړې ==
 ښاغلي ميره کي خپلې لومړنۍ زده کړې تر اتم ټولګي په افغانستان کې کړي او نهم ټولګی يې په پېښور کې د سيد جمال الدين افغان په لېسه کې بشپړ کړی او خپلې پاتې زده کړې يې په امريکا کې سر ته رسولي. په همدې توګه يې د خپلو لوړو زده کړو پيل د امريکا د ايلناي په پوهنتون کې د حقوقو او سياسي علومو په رشته کې سر ته رسولي. هغه خپله لومړنۍ ماسټري په حقوقو او نړېوالو اړيکو کې د امريکا د ايلېنای د پوهنتون څخه لاس ته راوړې. دوهمه ماسټري يې د منځني ختيځ په زده کړه کې ترلاسه کړې او بيا يې د جنګ د ختمولو په څانګه کې تخصص اخيستی دی. تر دې وړاندې يې خپله ډوکټورا په ټولنيز او اقتصادي پرمختګ کې اخيستې چې په همدې ترڅ کې يې د افغانستان د نه پرمختګ په باب خپل د ډوکټورا کتاب هم ليکلی دی. 
